fixed links spacing and added background image to images folder

--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ a:hover{
 
 .top-navigation .links li{
 	display: inline-block;
-	padding: ;
+	margin-left: 1.563rem;
 }
 
 .logo {
